--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "@nuxtjs/fontaine": "^0.4.4",
     "@nuxtjs/seo": "2.0.0-rc.23",
     "@pinia/nuxt": "^0.7.0",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
+    "@vueuse/motion": "^2.2.6",
     "nuxt": "^3.14.159",
     "nuxt-security": "^2.1.1",
     "nuxt-svgo": "^4.0.8",
@@ -26,25 +25,28 @@
     "pinia-plugin-persistedstate": "^4.1.3",
     "radix-vue": "^1.9.10",
     "shadcn-nuxt": "^0.10.4",
-    "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7",
     "vee-validate": "^4.14.7",
     "vue": "^3.5.13",
     "vue-router": "^4.4.5",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@inspira-ui/plugins": "^0.0.1",
     "@nuxt/eslint": "^0.6.2",
     "@nuxt/icon": "^1.8.1",
     "@nuxtjs/color-mode": "^3.5.2",
     "@nuxtjs/tailwindcss": "^6.12.2",
     "@types/tailwindcss": "^3.1.0",
-    "@vueuse/core": "^11.2.0",
+    "@vueuse/core": "^11.3.0",
     "@vueuse/nuxt": "^11.2.0",
     "@zadigetvoltaire/nuxt-well-known": "^0.0.13",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "eslint": "^9.15.0",
     "prettier": "^3.3.3",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.4.17",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.6.3",
     "vue-tsc": "^2.1.10"
   }
