--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@nuxtjs/seo": "2.0.0-rc.23",
     "@pinia/nuxt": "^0.7.0",
     "@vueuse/motion": "^2.2.6",
+    "date-fns": "^4.1.0",
     "nuxt": "^3.14.159",
     "nuxt-security": "^2.1.1",
     "nuxt-svgo": "^4.0.8",
