--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dev": "nuxt dev"
   },
   "dependencies": {
+    "@firebase/app-types": "^0.9.3",
     "@formkit/auto-animate": "^0.8.2",
     "@libsql/client": "^0.14.0",
     "@nuxt/fonts": "^0.10.2",
@@ -20,10 +21,14 @@
     "@pinia/nuxt": "^0.7.0",
     "@vueuse/motion": "^2.2.6",
     "date-fns": "^4.1.0",
+    "firebase": "^11.1.0",
+    "firebase-admin": "^13.0.2",
+    "firebase-functions": "^6.2.0",
     "nuxt": "^3.14.159",
     "nuxt-security": "^2.1.1",
     "nuxt-svgo": "^4.0.8",
     "nuxt-vitalizer": "^0.10.0",
+    "nuxt-vuefire": "1.0.5",
     "pinia": "^2.2.6",
     "pinia-plugin-persistedstate": "^4.1.3",
     "radix-vue": "^1.9.10",
@@ -32,6 +37,7 @@
     "vue": "^3.5.13",
     "vue-router": "^4.4.5",
     "vue-use-spring": "^0.3.3",
+    "vuefire": ">=3.2.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
