--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nuxtjs/fontaine": "^0.4.4",
     "@nuxtjs/seo": "2.0.0-rc.23",
     "@pinia/nuxt": "^0.7.0",
+    "@vite-pwa/nuxt": "0.10.6",
     "@vueuse/motion": "^2.2.6",
     "date-fns": "^4.1.0",
     "firebase": "^11.1.0",
