--- a/components.json
+++ b/components.json
@@ -1,17 +1,19 @@
 {
+  "$schema": "https://shadcn-vue.com/schema.json",
+  "style": "new-york",
+  "typescript": true,
   "tailwind": {
+    "config": "tailwind.config.ts",
     "css": "assets/css/tailwind.css",
-    "config": "tailwind.config.js",
+    "baseColor": "zinc",
     "cssVariables": true,
-    "baseColor": "zinc"
+    "prefix": ""
   },
   "aliases": {
     "components": "@/components",
-    "utils": "@/utils/index"
-  },
-  "$schema": "https://shadcn-vue.com/schema.json",
-  "tsConfigPath": ".nuxt/tsconfig.json",
-  "framework": "nuxt",
-  "style": "default",
-  "typescript": true
+    "composables": "@/composables",
+    "utils": "@/utils",
+    "ui": "@/components/ui",
+    "lib": "@/lib"
+  }
 }
