--- a/components.json
+++ b/components.json
@@ -1,19 +1,17 @@
 {
-  "$schema": "https://shadcn-vue.com/schema.json",
-  "style": "new-york",
-  "typescript": true,
   "tailwind": {
-    "config": "tailwind.config.ts",
     "css": "assets/css/tailwind.css",
-    "baseColor": "zinc",
+    "config": "tailwind.config.js",
     "cssVariables": true,
-    "prefix": ""
+    "baseColor": "zinc"
   },
   "aliases": {
     "components": "@/components",
-    "composables": "@/composables",
-    "utils": "@/utils",
-    "ui": "@/components/ui",
-    "lib": "@/lib"
-  }
+    "utils": "@/utils/index"
+  },
+  "$schema": "https://shadcn-vue.com/schema.json",
+  "tsConfigPath": ".nuxt/tsconfig.json",
+  "framework": "nuxt",
+  "style": "default",
+  "typescript": true
 }
